refactor: enhance PendingUser and OtpToken entities with improved schema indexing, DTO structures, and robust verification logic.