@@ -1,37 +1,35 @@
 package com.thirdhand.campusvault.security;
 
 import com.thirdhand.campusvault.entity.User;
+import com.thirdhand.campusvault.exception.ResourceNotFoundException;
 import com.thirdhand.campusvault.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
-public class CustomUserDetailsServiceImpl
-        implements UserDetailsService {
+public class CustomUserDetailsServiceImpl implements UserDetailsService {
 
     private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(
-            String email
-    ) throws UsernameNotFoundException {
+    public UserDetails loadUserByUsername(String email)
+            throws UsernameNotFoundException {
 
         User user = userRepository.findByEmailIgnoreCase(email)
                 .orElseThrow(() ->
-                        new UsernameNotFoundException(
-                                "User not found"
-                        )
-                );
+                        new ResourceNotFoundException("User not found"));
 
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                Collections.singletonList(
+                        new SimpleGrantedAuthority("ROLE_USER")
+                )
         );
     }
 }
